--- a/Spring_Rest/src/main/resources/templates/users.html
+++ b/Spring_Rest/src/main/resources/templates/users.html
@@ -3,7 +3,7 @@
     <body>
         <p th:text="'Count of users: ' + ${users.size()} + '!'"></p>
         <ul th:each="user : ${users}">
-            <li><button th:text="${user.getFio()}"></button></li>
+            <li th:text="${user.getFio()}"></li>
         </ul>
     </body>
 </html>
